crates/plotnik-tests/tests/04-emit/types/quantifiers/error_row_hint_avoids_enclosing_capture.txt
Q = {
  (identifier) @items
  {(number) @x}*
}
------------------ DIAGNOSTICS -------------------
error: captures `@x` repeat with `*` but aren't collected into a list
 --> query.ptk:3:3
  |
3 |   {(number) @x}*
  |   ^^^^^^^^^^^^^^
  |
help: add a row capture so each repeat becomes one element: `{...}* @rows`
help: or discard the captures if only the structure matters: `{...}* @_`
